--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main">
+			  <section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
+							<h1>Erica Wilson</h1>
 							<p>Senior Psychonautics Engineer</p>
 						</header>
 						<!--
@@ -63,9 +63,9 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter">Twitter</a></li>
-								<li><a href="#" class="icon brands fa-instagram">Instagram</a></li>
-								<li><a href="#" class="icon brands fa-facebook-f">Facebook</a></li>
+								<li><a href="https://twitter.com/pumpkinnice" class="icon brands fa-twitter">Twitter</a></li>
+								<li><a href="https://www.instagram.com/alibasterd" class="icon brands fa-instagram">Instagram</a></li>
+								<li></li>
 							</ul>
 						</footer>
 					</section>
@@ -73,7 +73,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						  <li>&nbsp;</li>
+						  <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
