--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							    <h2>Erica&nbsp; <br>
 							      Wilson</h2>
 							    <p><strong>Email</strong>:info@eWilson.ca </p>
-							    <button><img src="images/327-3271275_transparent-twitter-logo-png-png-download-twitter-icon.png" alt="" width="50"></button>
+							    <button><a href="https://twitter.com/pumpkinnice" target="_blank"><img src="images/327-3271275_transparent-twitter-logo-png-png-download-twitter-icon.jpg" alt="" width="45"></a></button>
 </header>
-				  <button><img src="images/instagram-flat-icon-circle-image-400x400.png" width="52" height="50" alt=""/></button>
+				  <button><a href="https://www.instagram.com/alibasterd/" target="_blank"><img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""/></a></button>
 			    </section>
 <p>
 	  <!-- Mini Posts -->
