--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
 				<!-- Header -->
 			  <header id="header">
-				<h1><a href="index.html">Future Imperfect</a></h1>
+				<h1><a href="index.html">Hello!</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="About Me/about me.html"Me.html>About Me</a></li>
+								<li><a href="ewilson.ca/About Me">About Me</a></li>
 								<li><a href="#">Ipsum</a></li>
 								<li><a href="#">Feugiat</a></li>
 								<li><a href="#">Tempus</a></li>
