--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<h1><a href="index.html">Hello!</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="ewilson.ca/About">About Me</a></li>
+								<li><a href="About.html">About Me</a></li>
 								<li><a href="#">Ipsum</a></li>
 								<li><a href="#">Feugiat</a></li>
 								<li><a href="#">Tempus</a></li>
