--- a/index.html
+++ b/index.html
@@ -509,10 +509,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				  <header>
 							    <h2>Erica&nbsp; <br>
 							      Wilson</h2>
-							    <p><strong>Email</strong>:info@eWilson.ca </p>
-							    <button><a href="https://twitter.com/pumpkinnice" target="_blank"><img src="images/transparenttwitter.png"lt="" width="43" height="44"></a></button>
+				    <p><strong>Email</strong>:info@eWilson.ca </p>
+							    <button>
+							    <img src="images/transparenttwitter.png"lt="" width="43" height="44"></button>
 </header>
-				  <button><a href="https://www.instagram.com/alibasterd/" target="_blank"><img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""/></a></button>
+				  <button>
+				  <img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""/></button>
 			    </section>
 <p>
 	  <!-- Mini Posts -->
