--- a/index.html
+++ b/index.html
@@ -509,17 +509,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				  <header>
 							    <h2>Erica&nbsp; <br>
 							      Wilson</h2>
-				    <p><strong>Email</strong>:info@eWilson.ca </p>
-							    <button>
-							    <img src="images/transparenttwitter.png"lt="" width="43" height="44"></button>
-</header>
-				  <button>
-				  <img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""/></button>
+				    <p><strong>Email</strong>:info@eWilson.ca<br>
+			        <strong><a href="https://twitter.com/pumpkinnice"><img src="images/transparenttwitter.png" width="44" height="43" alt=""></a></strong><a href="https://www.instagram.com/alibasterd/"><img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""></a> </p>
+				  </header>
+				  </button>
 			    </section>
-<p>
-	  <!-- Mini Posts -->
-      </p>
-<section>
+			    <section>
 			  <div class="mini-posts">
 
 									<!-- Mini Post -->
@@ -566,7 +561,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			    </section>
 
 						<!-- Posts List -->
-							<section>
+				<section>
 								<ul class="posts">
 									<li>
 										<article>
@@ -617,25 +612,23 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- About -->
-							<section class="blurb">
+				<section class="blurb">
 								<h2>About</h2>
 								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
-								</ul>
-							</section>
+									<li><a href="#" class="button">Learn More</a></li></ul></section>
 
 						<!-- Footer -->
-							<section id="footer">
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
-									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
-							</section>
+				        <section id="footer">
+				          <ul class="icons">
+				            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				            <li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
+				            <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				            </ul>
+				          <p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+				          </section>
 
 			  </section>
 
