--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							    <h2>Erica&nbsp; <br>
 							      Wilson</h2>
 				    <p><strong>Email</strong>:info@eWilson.ca<br>
-			        <strong><a href="https://twitter.com/pumpkinnice"><img src="images/transparenttwitter.png" width="44" height="43" alt=""></a></strong><a href="https://www.instagram.com/alibasterd/"><img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""></a> </p>
+			        <strong><a href="https://twitter.com/pumpkinnice" target="_blank"><img src="images/transparenttwitter.png" width="44" height="43" alt=""></a></strong><a href="https://www.instagram.com/alibasterd/"><img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""></a> </p>
 				  </header>
 				  </button>
 			    </section>
