--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 										<a href="#" class="author"><span class="name">Erica Wilson</span><img src="images/3DMe.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="single.html" class="image featured"><img src="images/Annotation 2019-11-24 092145.png" alt="" /></a>
-								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+								<a href="single.html" class="image featured"><img src="images/ACB98C12-E796-4485-A560-E29CDDBAEC6B.JPG" alt="" /></a>
+								<p>Life blogger, makeup enthusiast, real life person. Follow my journey while I try to get in shape. New content available whenever I can. </p>
 								<footer>
 									<ul class="actions">
 										<li><a href="Beach.html" class="button large">Continue Reading</a></li>
@@ -510,7 +510,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							    <h2>Erica&nbsp; <br>
 							      Wilson</h2>
 				    <p><strong>Email</strong>:info@eWilson.ca<br>
-			        <strong><a href="https://twitter.com/pumpkinnice" target="_blank"><img src="images/transparenttwitter.png" width="44" height="43" alt=""></a></strong><a href="https://www.instagram.com/alibasterd/"><img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""></a> </p>
+			        <strong><a href="https://twitter.com/pumpkinnice" target="_blank"><img src="images/transparenttwitter.png" width="44" height="43" alt=""></a></strong><a href="https://www.instagram.com/alibasterd/" target="_blank"><img src="images/instagram-flat-icon-circle-image-400x400.png" width="45" height="44" alt=""></a> </p>
 				  </header>
 				  </button>
 			    </section>
