--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 						<nav class="links">
 							<ul>
 								<li><a href="About.html">About Me</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="#">Life&nbsp;</a></li>
+								<li><a href="#">Makeup&nbsp;</a></li>
+<li><a href="#">weightloss</a></li>
+								<li><a href="#">contact me</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
